# APPIOframework

./: .gitignore  .gitlab-ci.yml  .travis.yml  README.md  appio.build.sln  appio.sln  appio.tests.sln  oppo-terminal.sln  oppo-terminal.tests.sln  oppo.build.sln  oppo.sln  oppo.tests.sln
bash-ci/: run-dotnet-build.sh  run-dotnet-publish.sh  run-dotnet-test.sh  run-dpkg-build--open62541--v1.0.0.sh  run-dpkg-install--open62541--v1.0.0.sh  run-dpkg-remove--appio-terminal.sh  run-dpkg-remove--open62541--v0.3.0.sh  run-dpkg-remove--open62541--v1.0.0.sh  run-pipeline.sh  run-system-tests.sh
bash-developer/: run-build-installer-local.sh  run-reinstall--appio-terminal--local.sh  run-reinstall--oppo-terminal--local.sh  run-reinstall-oppo-local.sh  util-elevate.sh
bash-gitlab-ci/: install-sonarscanner.sh  run-build.sh  run-dotnet-publish.sh  run-dpkg-build--appio-terminal.sh  run-dpkg-build--open62541--v0.3.0.sh  run-dpkg-build--oppo-terminal.sh  run-dpkg-install--appio-terminal.sh  run-dpkg-install--open62541--v0.3.0.sh  run-dpkg-install--open62541--v1.0.0.sh  run-dpkg-install--oppo-terminal.sh  run-dpkg-remove--oppo-terminal.sh  run-installer.sh  run-integration-tests.sh  run-purge.sh  run-sonarscanner.sh  run-tests.sh  util-integration-tests.sh
bash-gitlab-ci/integration-tests/: run-build-help--success.sh  run-build-opcuaapp--failure--extended.sh  run-build-opcuaapp--failure.sh  run-build-opcuaapp--success.sh  run-clean-help--success.sh  run-clean-opcuaapp--failure--extended.sh  (+53 more)
oppo-terminal/: ConsoleWriter.cs  IWriter.cs  Program.cs  oppo-terminal.csproj
oppo-terminal.tests/: WriterTests.cs  oppo-terminal.tests.csproj
src/oppo-resources/open62541/: constants-server.h  globalVariables-client.h  loadInformationModels-server.c  main-client.c  main-server.c  main.c  mainCallbacks-server.c  meson-server.build  meson.build  meson_ClientServerType.build  meson_ClientType.build  meson_ServerType.build  models-server.c  nodeSetFunctions-server.c
tmp-coverage/: README.md  code-coverage.sln
tmp-static-analysis/: README.md  static-analysis.sln
(+589 files in other folders)
